<resources>
    <string name="app_name">TeacherAssistant</string>

    <!-- Main Menu -->
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="report">Todays Marks</string>

    <!-- Add student -->
    <string name="name">Name:</string>
    <string name="surname">Surname:</string>
    <string name="addStudent">Add Student</string>

    <!-- Add course -->
    <string name="courseName">Name of the course:</string>
    <string name="addCourse">Add Course</string>

    <!-- Add mark -->
    <string name="markName">Mark:</string>
    <string name="markNote">Note:</string>
    <string name="addMark">Add Mark</string>

    <!-- Del/Ed/Add -->
    <string name="edit">Edit</string>
    <string name="delete">Del</string>
    <string name="add">Add</string>

    <!-- Marks -->
    <string name="marks">Marks</string>
    <string name="student">Student</string>
    <string name="course">Course</string>

    <!-- Marks array -->
    <string-array name="marks_array">
        <item>BardzoDobry</item>
        <item>DobryPlus</item>
        <item>Dobry</item>
        <item>DostatecznyPlus</item>
        <item>Dostateczny</item>
        <item>Niedostateczny</item>
    </string-array>

    <!-- Gender array -->
    <string-array name="students_gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <!-- CRS/STS -->
    <string name="crs">CRS</string>
    <string name="sts">STS</string>
    <string name="addToCRS">ADD TO COURSE</string>
    <string name="avaCrs">Available courses</string>
    <string name="avaSts">Available students</string>
    <string name="addToCrs">ADD TO COURSE</string>
    <string name="addStudents">Add Students</string>

</resources>