<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/crsNameTV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:gravity="center"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/crsStudentsBtn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:backgroundTint="#ccc0c0"
        android:textSize="12sp"
        tools:ignore="ButtonStyle,SmallSp"
        android:includeFontPadding="false"
        android:text="@string/sts"/>

    <Button
        android:id="@+id/crsEdit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="#4287f5"
        android:text="@string/edit"
        android:textSize="12sp"
        tools:ignore="ButtonStyle,SmallSp"
        android:includeFontPadding="false"/>

    <Button
        android:id="@+id/crsDel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:backgroundTint="#d44a4a"
        android:text="@string/delete"
        android:textSize="12sp"
        tools:ignore="ButtonStyle,SmallSp"
        android:includeFontPadding="false"/>

</LinearLayout>